--- a/index.html
+++ b/index.html
@@ -1,44 +1,143 @@
-<!doctype html>
-  <html lang="fr">
+
+
+<!DOCTYPE html>
+<html>
     <head>
-      <meta charset="utf-8">
-      <title>cv Pascal Moriceau</title>
-      <link rel="stylesheet" href="style.css"/>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="style.css" rel="stylesheet">
+      <title>Hello world with Bootstrap</title>
     </head>
-    <body>
-         <header>
-             <h1><em>Moriceau Pascal</em></h1>
-             <p>7 rue Felix Despagnet<br>
-             40800 Aire-Sur-L'Adour<br>
-             07-83-24-61-71</p>
-         </header>
-      <div>
-      
-<h2>Experiences Professionnelles</h2>
-       <ul>
-           <li>Directeur adjoint</li>
-           <li>Gerant de restaurant</li>
-           <li>Serveur restaurant</li>
-       </ul>
+<body>
 
-<h2>Formations</h2>
-<ul>
-    <li>Ecole Simplon</li>
-    <li>Paysagiste</li>
-    <li>Hotellerie-restauration</li>
-</ul>
+          <header> 
+              <div class="container-fluid">
+               <div class="row"> 
+                <div class="col-md-12" style="height: 150px; background-color: Teal">
 
-<h2>Loisirs</h2>
- <ul>
-  <li>Basket</li>
-  <li>Ciné/theatre</li>
-  <li>Nouvelles technologies</li>
-</ul>
-</p>
-      </div>
-    <footer> 
-     <p>pascalm@loveme.fr</p>
-    </footer>
-    </body>
-  </html>
-  
+                 <img src=" image/casquette.jpeg" height="80%" width="10%" class="image-circle">
+
+                 <h3>Divshot</h3><p>8PTS</p> 
+                </div>
+               </div>
+             </div>
+          </header>
+
+
+<div class="col-md-4">
+<div class="row">
+<div class="col-md-12 big" style="height: 400px; background-color: Lavender">
+<img src=" image/coupe.jpeg" height="50%" width="50%" class="image1">
+<footer class="gris">
+<h4>laederboard</h4>
+<div class='arrow' data-angle='90'></div>
+</footer>
+</div>
+
+<div class="col-md-6 little" style="height: 200px; background-color: Salmon">
+<img src=" image/mask.jpeg" height="50%" width="50%" class="image">
+<footer class="orange">
+<h4>Entertainment</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+
+<div class="col-md-6 little" style="height: 200px; background-color: #9370D8">
+<img src=" image/ballon-foot.jpeg" height="50%" width="50%" class="image">
+<footer class="violet">
+<h4>Sports</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+<div class="col-md-4">
+<div class="row">
+<div class="col-md-6 little" style="height: 200px; background-color: AquaMarine">
+<img src=" image/bouffe.png" height="50%" width="50%" class="image">
+<footer class="vert">
+<h4>Food & Drink</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+
+
+<div class="col-md-6 little" style="height: 200px; background-color: Khaki">
+<img src=" image/ecole.png" height="50%" width="50%" class="image">
+<footer class="jaune">
+<h4>General Knowledge</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+
+<div class="col-md-12 big white" style="height: 400px; background-color: Salmon">
+<img src=" image/globe.jpeg" height="50%" width="50%" class="image1">
+<footer class="orange">
+<h4>Geography</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+</div>
+</div>
+
+
+<div class="col-md-4">
+<div class="row">
+<div class="col-md-12 small" style="height: 200px; background-color: Turquoise">
+<img src=" image/dino.jpeg" height="50%" width="50%" class="image">
+<footer class="bleue">
+<h4>History</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+
+<div class="col-md-6 little" style="height: 200px; background-color: AquaMarine">
+<img src="image/chimie.png" height="50%" width="50%" class="image">
+<footer class="vert">
+<h4>Science and Nature</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+
+<div class="col-md-6 little" style="height: 200px; background-color: #9370D8">
+<img src="image/film.jpeg" height="50%" width="50%" class="image">
+<footer class="violet">
+<h4>TV&Movies</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+
+<div class="col-md-6 little" style="height: 200px; background-color: Turquoise">
+<img src="C:\Mes documents\hello-world-bootstrap\image/musik.png" height="50%" width="50%" class="image">
+<footer class="bleue">
+<h4>Music</h4>
+<div class='triangle' data-angle='90'></div>
+</footer>
+</div>
+
+<div class="col-md-6 little" style="height: 200px; background-color: Lavender">
+<img src=" image/profile.jpeg" height="50%" width="50%" class="image">
+<footer class="gris">
+<h4>Profile</h4>
+<div class='arrow' data-angle='90'></div>
+</footer>
+</div>
+</div>
+</div>
+</div>
+
+
+</body>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+</body>
+</html>
